Contact UI: Form separation fixed on mobile.

--- a/app/scss/views/_contact.scss
+++ b/app/scss/views/_contact.scss
@@ -214,6 +214,11 @@
 
 				.sz-submit-btn{
 					margin-top: 34px;
+					margin-bottom: 52px;
+
+					@include desktop {
+						margin-bottom: 0;
+					}
 				}
 			}
 		}
